--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/openai": "^0.3.17",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -17,19 +18,24 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.62.7",
     "@types/mapbox-gl": "^3.4.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.14.4",
+    "langchain": "^0.3.11",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
