--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,6 @@
 # API Keys
+NEXT_PUBLIC_OPENWEATHERMAP_API_KEY=your-openweather-key
 OPENAI_API_KEY=your-openai-key
-MAPBOX_ACCESS_TOKEN=your-mapbox-token
 
-# Database
-DATABASE_URL=your-database-url
-
-# Authentication (if using)
-NEXTAUTH_URL=https://your-domain.com
-NEXTAUTH_SECRET=your-secret
-
-# Other Config
-NEXT_PUBLIC_APP_URL=https://your-domain.com 
+# Optional - if using maps
+NEXT_PUBLIC_MAPBOX_TOKEN=your-mapbox-token 
