--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
