--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.38",
+    "@langchain/langgraph": "^0.2.44",
     "@langchain/openai": "^0.3.17",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
@@ -19,6 +23,7 @@
     "@tanstack/react-query": "^5.62.7",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^4.1.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -28,22 +33,28 @@
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.3",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.0.46",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.17",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^8",
