--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "ingest": "tsx scripts/ingest-municipal-services.ts"
   },
   "dependencies": {
+    "@assistant-ui/react-markdown": "^0.7.17",
+    "@assistant-ui/react-syntax-highlighter": "^0.7.9",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/community": "^0.3.29",
     "@langchain/core": "^0.3.38",
@@ -17,11 +19,14 @@
     "@langchain/openai": "^0.3.17",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.62.7",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -29,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.14.4",
     "langchain": "^0.3.11",
     "leaflet": "^1.9.4",
@@ -42,7 +48,11 @@
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.3",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
