--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ dist
 
 
 
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -38,3 +39,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.cursorrules
