--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@tanstack/react-query": "^5.62.7",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^3.1.12",
+    "ai": "^3.4.33",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,6 +42,7 @@
     "mapbox-gl": "^3.8.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "openai": "^4.83.0",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
