--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.62.7",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "@tomtom-international/web-sdk-plugin-minimap": "^2.1.6",
+    "@tomtom-international/web-sdk-plugin-pancontrols": "^2.1.6",
+    "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
+    "@tomtom-international/web-sdk-plugin-zoomcontrols": "^2.1.6",
     "@tomtom-international/web-sdk-services": "^6.25.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
