--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-safe-area": "^0.6.0",
     "use-stick-to-bottom": "^1.0.46",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
