--- a/components.json
+++ b/components.json
@@ -15,7 +15,10 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "styles": "@/styles",
+    "config": "@/config",
+    "mobile": "@/mobile"
   },
   "iconLibrary": "lucide"
 }
