--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
