--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
     }
   },
   "framework": "nextjs",
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install",
   "headers": [
     {
       "source": "/(.*)",
