--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend-smart-city",
-  "version": "0.1.0",
+  "name": "connect-aveiro",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -52,7 +52,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "next-themes": "^0.4.4",
     "openai": "^4.83.0",
     "react": "^18",
@@ -84,7 +84,7 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
