--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
@@ -84,12 +87,9 @@
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
   },
