--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^3.4.33",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +56,7 @@
     "next": "^14.2.24",
     "next-themes": "^0.4.4",
     "openai": "^4.83.0",
+    "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
@@ -68,16 +70,14 @@
     "remark-math": "^6.0.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "use-stick-to-bottom": "^1.0.46",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
-    "zustand": "^5.0.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.17"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
