--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "buildDate": "${new Date().toISOString()}",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tsc && next build",
     "start": "next start",
     "lint": "next lint",
     "ingest": "tsx scripts/ingest-municipal-services.ts"
@@ -78,19 +78,19 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@types/lodash": "^4.17.15",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
-    "@types/lodash": "^4.17.15",
     "@types/node": "^20.17.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "dotenv": "^16.4.7",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
     "tsx": "^4.19.2",
     "typescript": "^5"
   },
