--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && next build",
     "start": "next start",
     "lint": "next lint",
-    "ingest": "tsx scripts/ingest-municipal-services.ts"
+    "ingest": "tsx scripts/ingest-municipal-services.ts",
+    "dev:mobile": "local-ssl-proxy --source 3001 --target 3000 & next dev",
+    "build:analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@assistant-ui/react-markdown": "^0.7.17",
@@ -60,6 +62,7 @@
     "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
@@ -81,7 +84,8 @@
     "zustand": "^5.0.3",
     "@types/lodash": "^4.17.15",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16"
+    "eslint-config-next": "14.2.16",
+    "critters": "^0.0.20"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
