--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/docs/*
+
+*.txt
+*.pdf
+*.docx
+*.doc
+*.xls
+*.xlsx
 # dependencies
 node_modules
 .pnp
