--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@assistant-ui/react-markdown": "^0.7.17",
     "@assistant-ui/react-syntax-highlighter": "^0.7.9",
     "@hookform/resolvers": "^3.9.1",
+    "@iconify/react": "^5.2.0",
     "@langchain/community": "^0.3.29",
     "@langchain/core": "^0.3.38",
     "@langchain/langgraph": "^0.2.44",
@@ -40,6 +41,7 @@
     "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
     "@tomtom-international/web-sdk-plugin-zoomcontrols": "^2.1.6",
     "@tomtom-international/web-sdk-services": "^6.25.0",
+    "@types/lodash": "^4.17.15",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^3.4.33",
@@ -49,7 +51,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "critters": "^0.0.20",
     "embla-carousel-react": "^8.5.2",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16",
     "framer-motion": "^11.14.4",
     "langchain": "^0.3.11",
     "leaflet": "^1.9.4",
@@ -81,11 +86,7 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1",
-    "zustand": "^5.0.3",
-    "@types/lodash": "^4.17.15",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
-    "critters": "^0.0.20"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.16",
